front page alignment and responsiveness fixes. work stashed

--- a/src/app/portal/components/home-page/home-page.component.scss
+++ b/src/app/portal/components/home-page/home-page.component.scss
@@ -13,6 +13,16 @@
   overflow: hidden;
 }
 
+.main-parallel-column {
+  max-height: calc(100% - 74px);
+  height: 100%;
+  .news-card {
+    display: flex;
+    height: 90% !important;
+    margin-bottom: 15px;
+  }
+}
+
 .row {
   margin-right: 0px !important;
   margin-left: 0px !important;
